# PyGalactICS

./: .gitignore  Makefile  NOTICE.md  README.md  pyproject.toml
.github/workflows/: test.yml
configs/: template.json
docs/: conf.py  index.rst
examples/: halo_first_workflow.py  mw_default.py  sample_galaxy.py  solve_potential.py
models/MilkyWay/: check  check.sm  checkdens.sm  commonblocks  density.sm  df.sm  disk.sm  diskprofiles  diskprofiles.f  equivalence  gasdiskprofiles.f  gasnorm  generate_galactics_ics.py  in.bulge  in.dbh  in.dbh_disk  in.dbh_old  in.disk  in.diskdf  in.diskdf2  in.gas  in.gasdisk  in.halo  in.no_bulge  makefile  param  rotation_curve.py  sh.sm  vc.sm  vcirc.f  vcirc.sm
notebooks/: README.md  mpi_force_bench.py  nfw_halo_walkthrough.ipynb
py/: bulge_density.py  constants.py  dbh.py  disk_density.py  galaxy_model.py  gas_density.py  grid_potential_utils.py  halo_density.py  harmonic_integration.py  initializer.py  truncation.py
scripts/: build_legacy.sh  build_legacy_nmake.sh  build_samplers.sh  ensure_openmpi.sh  install_binary.sh  setup_dev.sh
src/: .smhist
src/galacticsics/: __init__.py  builder.py  models.py  numerics.py  units.py
src/galacticsics/_core/: README.md
src/galacticsics/artifacts/: __init__.py  cli.py  generate.py  paths.py  verify.py
src/galacticsics/distribution/: __init__.py  diskdf.py  frequencies.py
src/galacticsics/fitting/: __init__.py  halo_particles.py  mcmc.py  optimizer.py  rotation_curve.py
src/ntropy/: README.md  pyproject.toml  setup.py
src/ntropy/configs/: nfw_short.json  plummer_short.json  sersic_short.json
src/ntropy/examples/: galacticsics_ntropy_e2e.py  make_all_ics.py  run_plummer.py
src/ntropy/ntropy/: __init__.py  cli.py  config.py  particles.py  simulation.py  softening.py  units.py
src/ntropy/ntropy/analysis/: __init__.py  density.py  disk_density.py
src/ntropy/ntropy/benchmark/: __init__.py  force_breakdown.py  mpi_force_bench.py  mpi_simulation_worker.py  mpi_subprocess.py
src/ntropy/ntropy/forces/: __init__.py  bhtree.py  bhtree_c.py  brute.py
src/ntropy/ntropy/forces/c/: PARALLEL.md  bh_module.c  bh_tree.c  bh_tree.h
src/ntropy/ntropy/ics/: __init__.py  composite.py  disk.py  nfw.py  plummer.py  sersic.py  spherical.py
src/ntropy/ntropy/integrations/: __init__.py  galacticsics.py
src/ntropy/ntropy/integrators/: __init__.py  euler.py  leapfrog.py  registry.py  rk.py
src/ntropy/ntropy/io/: __init__.py  particles.py  softening.py
src/ntropy/ntropy/parallel/: __init__.py  domains.py  mpi.py  pool.py
src/ntropy/tests/: conftest.py  mpi_density_worker.py  test_bh_c.py  test_config.py  test_disk_density.py  test_explicit_integrators.py  test_forces.py  test_galacticsics_integration.py  test_ic_composites.py  test_ics_plummer.py  test_integrator.py  test_io.py  test_parallel.py  test_parallel_density.py  test_reproducibility.py  test_softening.py  test_units.py
tests/: __init__.py  conftest.py  constants.py  test_builder_milkyway.py  test_halo_first.py  test_io_milkyway.py  test_legacy_inputs.py  test_models_spherical.py  test_numerics_parity.py  test_potential_milkyway.py  test_sampling_legacy.py  test_sampling_milkyway.py  test_units.py
tests/fixtures/: __init__.py  milkyway.py  spherical.py
(+13 files in other folders)
