[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galacticsics"
version = "0.1.0"
description = "Python library for GalactICS galaxy potential fitting and N-body initial conditions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "GalactICS contributors" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
galpy = ["galpy>=1.8"]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.7",
]
all = ["galacticsics[galpy,dev]"]

[project.scripts]
galacticsics-generate-artifacts = "galacticsics.artifacts.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "legacy_parity: compare output against legacy Fortran golden files",
    "legacy_binary: requires compiled legacy/bin executables",
]
